2004-08-15  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Remove reference to screen-exec.
	* gkb-applet.c: (cb_help): Use gnome_help_*.
	* prop-add.c: (response_cb): Same.
	* prop-map.c: (gkb_prop_map_help_clicked): Same
	* prop.c: (prophelp_cb): Same.

2004-08-15  Kjartan Maraas  <kmaraas@gnome.org>

	* keygrab.c: (init_xmaps): ANSIfication.
	* preset.c: (find_presets): ANSIfication.

2004-08-09  Kjartan Maraas  <kmaraas@gnome.org>

	* gkb.c: (gkb_update), (gkb_new): Make gkb remember
	settings between logins.
	* gkb.schemas.in: Needed preference. Closes bug #119421.
	Patch by Leena Gunda (leena.gunda at wipro.com)

2004-06-18  Dennis Smit  <ds@nerds-incorporated.org>

	* preset.c: Remove extraneous #include <dirent.h>. Should
	
	Patch by: Kjartan Maraas  <kmaraas@gnome.org>

	Fixes bug #124429.

2004-06-03  Szabolcs Ban <shooby@gnome.hu>

       * descs/BY_Belarussian.keyprop.in, descs/presets.xml.in,
         descs.sun/Sun_BY_Belarussian.keyprop.in,
         descs.sun/presets.xml.in: Fix a typo.
         Fixes bug #120758 
	 Fix provided by Kaushal Kumar <kaushal.kumar@wipro.com>

2004-05-28  Leena Gunda  <leena.gunda@wipro.com>

	* gkb-applet.c:
	(gkb_applet_shutdown), (gkb_update_handlers):
	Fix the warning when removing gkb applet from panel.
	Fixes bug 143277

2004-03-17  Glynn Foster  <glynn.foster@sun.com>

	* help/ja/*: Add ja docs since the orignal author didn't get back
	to me.

2004-03-16  Glynn Foster  <glynn.foster@sun.com>

	* help/Makefile.am: Add l10n'd docs to the build.

2004-03-15  Glynn Foster  <glynn.foster@sun.com>
	
	* help/*: Online localized help docs for de, es, fr, it, ko, sv
	zh_CN, zh_HK and zh_TW, from Sun's translation team.

2004-03-15  Glynn Foster  <glynn.foster@sun.com>

	* docs/*: Remove the old help docs, they're no longer needed 
	anymore.

2004-02-19  Kevin Vandersloot

	* gkb-applet.c: Key pressing fix. From Egmont Koblinger. Fixes 
	bug #101960

2004-02-17 Breda McColgan <breda.mccolgan@sun.com>
