@@ -1,6 +1,6 @@
 [Keymap Entry]
 Countries=1
-_Name=Spanish PC/AT 101 keyboard 
+_Name=Spanish PC/AT 101 keyboard
 Codepage=iso-8859-1
 Type=101
 Arch=ix86
