@@ -1,6 +1,6 @@
 [Keymap Entry]
 Countries=1
-_Name=Hungarian PC/AT 101 keyboard 
+_Name=Hungarian PC/AT 101 keyboard
 Codepage=iso-8859-2
 Type=101
 Arch=ix86
