@@ -1,6 +1,6 @@
 [Keymap Entry]
 Countries=1
-_Name=UK PC/AT keyboard 
+_Name=UK PC/AT keyboard
 Codepage=iso-8859-1
 Type=101
 Arch=ix86
