@@ -1,3 +1,11 @@
+2004-08-24  Davyd Madeley  <davyd@madeley.id.au>
+
+	* descs/ES_Spanish-x86.keyprop.desktop.in:
+	* descs/Hungarian-x86.keyprop.desktop.in:
+	* descs/UK-x86.keyprop.desktop.in: Remove trailing spaces from keymap
+	names. This does not break string freeze. Patch from Christian Rose
+	<menthos@menthos.com>. Closes #150890.
+
 2004-08-15  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* Makefile.am: Remove reference to screen-exec.
